enable rating by default

--- a/TrebleMaker/Dockerfile
+++ b/TrebleMaker/Dockerfile
@@ -25,15 +25,15 @@ ENV TM_ROOT_DIR="/TrebleMaker" \
     TM_API_PASS="maker" \
     TM_API_URL="http://treblemakerapi:7777" \
     TM_API_UPLOAD_URL="http://treblemakerapi:7777/filesync" \
-    TM_BYPASS_RHYTHM_RATING="true" \
-    TM_BYPASS_BASSLINE_RATING="true" \
-    TM_BYPASS_ARPEGGIO_RATING="true" \
-    TM_BYPASS_HARMONIC_LOOP_RATING="true" \
-    TM_BYPASS_BEAT_LOOP_RATING="true" \
-    TM_BYPASS_SEQUENCE_RATING="true" \
-    TM_BYPASS_EQ_RATING="true" \
+    TM_BYPASS_RHYTHM_RATING="false" \
+    TM_BYPASS_BASSLINE_RATING="false" \
+    TM_BYPASS_ARPEGGIO_RATING="false" \
+    TM_BYPASS_HARMONIC_LOOP_RATING="false" \
+    TM_BYPASS_BEAT_LOOP_RATING="false" \
+    TM_BYPASS_SEQUENCE_RATING="false" \
+    TM_BYPASS_EQ_RATING="false" \
     TM_BYPASS_ANALYTICS="false" \
-    TM_BYPASS_EQ_ANALYTICS="true" \
+    TM_BYPASS_EQ_ANALYTICS="false" \
     TM_NUM_OF_MIXES=1 \
     TM_NUM_OF_MIX_VARIATIONS=1 \
     TM_CORE_LOG_DIR="logs" \
